[package]
name = "turbo_diesel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "test"
test = true
bench = false
path = "src/main.rs"

[lib]
bench = false

[workspace]
members = ["macro", "."]

[features]
serde = ["dep:serde"]

[dependencies]
ntex = { version = "1.0", features = ["tokio"] }
diesel = { version = "2.1", features = [
  "r2d2",
  "sqlite",
  "postgres",
  "returning_clauses_for_sqlite_3_35",
] }
libsqlite3-sys = { version = "0.27", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = "1.0.111"
